@@ -1,3 +1,6 @@
+09/09/09 Sylvain Gaillard
+* Fixed white space skip in Fasta sequence
+
 20/08/09 Julien Dutheil
 * Added config files for CMake.
 
